--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\hp\AppData\Local\Temp\testng-eclipse-1345567709\testng-customsuite.xml</span>
+                    <span>C:\Users\hp\AppData\Local\Temp\testng-eclipse-1423342404\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.DataDrivenAPITest" hash-for-method="dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)">dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.XMLTest" hash-for-method="postTest">postTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.DataDrivenAPITest" hash-for-method="dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)">dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.DataDrivenAPITest" hash-for-method="dataDriven1">dataDriven1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.XMLTest" hash-for-method="xmlPojoTest">xmlPojoTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,32 +127,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">APITests.DataDrivenAPITest</span>
+              <span class="class-name">APITests.XMLTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)">
-                  </a> <!-- dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1) -->
-                  <span class="method-name">dataDriven</span>
-                  <span class="parameters">(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</span>
+                  <a name="postTest">
+                  </a> <!-- postTest -->
+                  <span class="method-name">postTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)">
-                  </a> <!-- dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1) -->
-                  <span class="method-name">dataDriven</span>
-                  <span class="parameters">(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="dataDriven1">
-                  </a> <!-- dataDriven1 -->
-                  <span class="method-name">dataDriven1</span>
-                  <em>
-(JacksonEg)                  </em>
+                  <a name="xmlPojoTest">
+                  </a> <!-- xmlPojoTest -->
+                  <span class="method-name">xmlPojoTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -165,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hp\AppData\Local\Temp\testng-eclipse-1345567709\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hp\AppData\Local\Temp\testng-eclipse-1423342404\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -174,7 +158,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;APITests.DataDrivenAPITest&quot;/&gt;
+      &lt;class name=&quot;APITests.XMLTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -214,24 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'dataDriven')
-data.setCell(0, 2, 'APITests.DataDrivenAPITest')
-data.setCell(0, 3, 11);
+data.setCell(0, 1, 'postTest')
+data.setCell(0, 2, 'APITests.XMLTest')
+data.setCell(0, 3, 6200);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'dataDriven1')
-data.setCell(1, 2, 'APITests.DataDrivenAPITest')
-data.setCell(1, 3, 9);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'dataDriven')
-data.setCell(2, 2, 'APITests.DataDrivenAPITest')
-data.setCell(2, 3, 6);
+data.setCell(1, 1, 'xmlPojoTest')
+data.setCell(1, 2, 'APITests.XMLTest')
+data.setCell(1, 3, 1508);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 ms</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -257,18 +237,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">APITests.DataDrivenAPITest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">APITests.XMLTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</span>
+                <span class="method-name">postTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</span>
-                <span class="method-start">16 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">dataDriven1</span>
-                <span class="method-start">36 ms</span>
+                <span class="method-name">xmlPojoTest</span>
+                <span class="method-start">6219 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
