--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66a57e">  <td>24/07/28 08:59:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenAPITest.dataDriven(int,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:APITests.DataDrivenAPITest@4232c52b]">dataDriven</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>24/07/28 08:59:22</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenAPITest.dataDriven1()[pri:2, instance:APITests.DataDrivenAPITest@4232c52b]">dataDriven1</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>24/07/28 08:59:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenAPITest.dataDriven(int,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:APITests.DataDrivenAPITest@4232c52b]">dataDriven</td> 
-  <td>main@278934944</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>24/08/11 09:12:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XMLTest.xmlPojoTest()[pri:2, instance:APITests.XMLTest@536aaa8d]">xmlPojoTest</td> 
+  <td>main@1884122755</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>24/08/11 09:12:36</td>   <td>-6220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XMLTest.postTest()[pri:1, instance:APITests.XMLTest@536aaa8d]">postTest</td> 
+  <td>main@1884122755</td>   <td></td> </tr>
 </table>
